// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders Education Bachelor 1`] = `
<div
  className="education"
>
  <div>
    <span>
      test college
    </span>
  </div>
  <div>
    <span>
      test major
    </span>
    <span
      className="major"
    >
      (
      BACHELOR
      )
    </span>
  </div>
  <div
    className="times"
  >
    <span>
      Jan, 2012
    </span>
    <span>
      -
    </span>
    <span>
      Jan, 2013
    </span>
  </div>
</div>
`;

exports[`renders Education Master 1`] = `
<div
  className="education"
>
  <div>
    <span>
      test college
    </span>
  </div>
  <div>
    <span>
      test major
    </span>
    <span
      className="major"
    >
      (
      MASTER
      )
    </span>
  </div>
  <div
    className="times"
  >
    <span>
      Jan, 2012
    </span>
    <span>
      -
    </span>
    <span>
      Jan, 2013
    </span>
  </div>
</div>
`;

exports[`renders Education PhD 1`] = `
<div
  className="education"
>
  <div>
    <span>
      test college
    </span>
  </div>
  <div>
    <span>
      test major
    </span>
    <span
      className="major"
    >
      (
      PHD
      )
    </span>
  </div>
  <div
    className="times"
  >
    <span>
      Jan, 2012
    </span>
    <span>
      -
    </span>
    <span>
      Jan, 2013
    </span>
  </div>
</div>
`;
